Fixed issue with nav for hotel and pass links. Fixed issue with accordion menu on mobile. Other styling issues were addressed. Added scroll to top in use effect for certain pages

--- a/src/Components/EventHomePass/styles.scss
+++ b/src/Components/EventHomePass/styles.scss
@@ -1,3 +1,5 @@
+@import '../../Utils/mixins.scss';
+
 .passContainer {
     display: flex;
     justify-content: center;
@@ -11,6 +13,15 @@
 
     .accordion {
         min-width: 1307px;
+
+        @include smDevice {
+            min-width: 100%;
+            padding: 1em;
+        }
+        @include xsDevice {
+            min-width: 100%;
+            padding: 1em;
+        }
 
         .accordion-item {
             .accordion-header {
